[package]
name = "set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.16"
crossterm = "0.25.0"
flexi_logger = "0.23.3"
log = "0.4.17"
once_cell = "1.14.0"
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
